--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,11 @@
+v0.1.4
+  -	Renamed startbar.py to "startbar"
+  -	Modified the script's permission and made it an executable file
+
+v0.1.3.2
+  -	Tweaked the default coloring used for Kali distros
+
+
 v0.1.3
   -	Changed default BG color to 196 if the distro is neither Ubuntu or Kali
 	  -	If Kali, the default BG color will be 51 (cyan - Kali's color scheme)
