--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,16 @@
+v0.1.4.4
+  -	Added a couple of examples to the end of the colormap
+  -	edited the help screen so that the version option is displayed last
+
+
+v0.1.4.3
+  -	Added '-cmap' option that will display the colormap
+	  -	displays the color codes (available color options)
+
+v0.1.4.2
+  -	Added '-v' option to display version number
+
+
 v0.1.4.1
   -	To avoid any "case sensitivity" issues, I tweaked TITLE so that it is all
 	lowercase letters when the function is searching the string to see if it
@@ -18,7 +31,10 @@ v0.1.3
 	  -	If the '-b' option is used, the BG color will be over written with the option
 		used.
 
-
 v0.1.2
   -	Changed default BG color to 202
 
+
+TO DO:
+[ ]  -	Do something for when there isn't a WSL_DISTRO_NAME value
+		  -	Set a default title string or something
